--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -11,170 +11,149 @@
     }
     html, body {
       user-select: none;
-      margin: 0;
-      padding: 0;
     }
-    /* Overlay only on YouTube logo area */
-    #ytOverlay {
+    .overlay {
       position: absolute;
-      bottom: 0.5rem;
-      right: 0.5rem;
-      width: 3rem;
-      height: 2rem;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+    }
+    .overlay .click-area {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 100px;
+      height: 30px;
       z-index: 20;
+    }
+    .play-btn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0, 0, 0, 0.5);
+      color: white;
+      border-radius: 50%;
+      padding: 1rem;
       cursor: pointer;
+      z-index: 15;
+    }
+    iframe {
+      pointer-events: auto !important;
     }
   </style>
 </head>
 <body class="bg-gray-900 text-white min-h-screen" oncontextmenu="return false;">
-  <div class="max-w-4xl mx-auto px-4 py-6 space-y-6">
-    <!-- Header -->
-    <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center space-y-4 sm:space-y-0">
-      <h1 class="text-3xl sm:text-4xl font-bold text-purple-400">Wind Breaker - Season 1</h1>
-      <div class="flex flex-wrap gap-2">
-        <input id="searchInput" type="text" placeholder="Search episodes..." class="px-3 py-2 rounded bg-gray-800 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-purple-500" />
-        <select id="themeSelector" class="px-3 py-2 rounded bg-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500">
-          <option value="default">Default</option>
-          <option value="dark1">Dark Purple</option>
-          <option value="dark2">Dark Blue</option>
-          <option value="dark3">Dark Gray</option>
-          <option value="dark4">Dark Green</option>
-          <option value="dark5">Dark Rose</option>
-        </select>
-        <a href="index.2.html" class="px-4 py-2 bg-purple-700 hover:bg-purple-800 rounded transition">Back</a>
+  <div class="max-w-4xl mx-auto p-4">
+    <header class="flex justify-between items-center">
+      <h1 class="text-3xl font-bold text-purple-300">Wind Breaker Season 1</h1>
+      <div class="flex gap-2">
+        <button onclick="toggleThemeMenu()" class="bg-purple-700 px-3 py-1 rounded">Themes</button>
+        <button onclick="toggleSearch()" class="bg-indigo-600 px-3 py-1 rounded">Search</button>
       </div>
-    </header><!-- Video Player -->
-<div id="videoContainer" class="relative w-full bg-black rounded-lg overflow-hidden" style="padding-bottom:56.25%;">
-  <iframe id="videoPlayer" class="absolute top-0 left-0 w-full h-full" 
-    src="https://www.youtube.com/embed/ne0Y0vyjxpE?rel=0&modestbranding=1&controls=1&fs=1"
-    frameborder="0" allow="autoplay; encrypted-media; fullscreen" allowfullscreen>
-  </iframe>
-  <div id="ytOverlay" onclick="triggerPopunder()"></div>
+    </header><div class="mt-4 relative aspect-video bg-black rounded-lg overflow-hidden">
+  <iframe id="videoPlayer" class="w-full h-full" src="https://www.youtube.com/embed/ne0Y0vyjxpE?autoplay=1&rel=0&modestbranding=1&controls=1&fs=1" frameborder="0" allow="autoplay; fullscreen; encrypted-media" allowfullscreen></iframe>
+  <div class="overlay">
+    <div class="click-area" onclick="window.open('https://sawutser.top/4/9278457', '_blank')"></div>
+    <div class="play-btn" onclick="startPlayback()">▶</div>
+  </div>
 </div>
 
-<!-- Description -->
-<div id="animeDesc" class="bg-gray-800 p-4 rounded-lg text-sm">
-  <h2 class="text-lg font-semibold text-purple-300 mb-2">About Wind Breaker</h2>
+<div id="animeDesc" class="mt-4 p-3 bg-purple-800 rounded">
+  <h2 class="text-xl font-semibold">About Wind Breaker</h2>
   <p>Haruka Sakura joins the feared Furin High, only to discover its delinquents protect their town. With intense fights and emotional growth, Wind Breaker balances action with heart.</p>
 </div>
 
-<!-- Episode Info -->
-<div class="bg-gray-800 p-4 rounded-lg space-y-1">
-  <h3 id="episodeTitle" class="text-xl font-semibold text-purple-300">Select an episode</h3>
-  <p id="episodeDesc" class="text-gray-300 text-sm">Click an episode below to start watching.</p>
-  <p id="uploadDate" class="text-gray-500 text-xs">Uploaded: —</p>
+<div class="mt-4">
+  <h3 class="text-lg font-semibold">Episodes</h3>
+  <div id="episodeList" class="grid grid-cols-1 sm:grid-cols-2 gap-3 mt-2"></div>
 </div>
 
-<!-- Episode List -->
-<div id="episodeList" class="grid grid-cols-2 sm:grid-cols-3 gap-4"></div>
+<div id="themeMenu" class="hidden mt-4 bg-gray-800 p-3 rounded">
+  <h3 class="font-bold mb-2">Select Theme</h3>
+  <div class="grid grid-cols-2 gap-2">
+    <button onclick="setTheme('dark1')" class="bg-gray-900 p-2 rounded">Dark 1</button>
+    <button onclick="setTheme('dark2')" class="bg-purple-900 p-2 rounded">Dark 2</button>
+    <button onclick="setTheme('dark3')" class="bg-blue-900 p-2 rounded">Dark 3</button>
+    <button onclick="setTheme('dark4')" class="bg-neutral-900 p-2 rounded">Dark 4</button>
+    <button onclick="setTheme('dark5')" class="bg-slate-900 p-2 rounded">Dark 5</button>
+    <button onclick="setTheme('light1')" class="bg-white text-black p-2 rounded">Light 1</button>
+    <button onclick="setTheme('light2')" class="bg-gray-100 text-black p-2 rounded">Light 2</button>
+    <button onclick="setTheme('light3')" class="bg-yellow-50 text-black p-2 rounded">Light 3</button>
+    <button onclick="setTheme('light4')" class="bg-pink-50 text-black p-2 rounded">Light 4</button>
+    <button onclick="setTheme('light5')" class="bg-green-50 text-black p-2 rounded">Light 5</button>
+  </div>
+</div>
 
-<!-- Footer -->
-<footer class="text-center text-sm text-gray-500 mt-8 border-t border-gray-700 pt-4">
-  <p>Special thanks to the original creators and copyright holders of <strong>Wind Breaker</strong>.</p>
-  <p class="italic mt-1">All video content is property of their respective owners. Support the official release whenever possible.</p>
+<div id="searchBar" class="hidden mt-4">
+  <input type="text" placeholder="Search episode..." oninput="searchEpisodes(this.value)" class="w-full p-2 rounded bg-gray-700 text-white" />
+</div>
+
+<footer class="mt-6 text-center text-sm text-gray-400">
+  <p>Special thanks to the original creators, studios, and copyright holders of <strong>Wind Breaker</strong>. Support the official release whenever possible.</p>
 </footer>
 
   </div>  <script>
-    // Popunder function
-    function triggerPopunder() {
-      (function(s,u,z,p){s.src=u; s.setAttribute('data-zone', z); (p||document.body).appendChild(s);})(
-        document.createElement('script'),
-        'https://shebudriftaiter.net/tag.min.js',
-        9277886,
-        document.body
-      );
-    }
+    const player = document.getElementById('videoPlayer');
+    const list = document.getElementById('episodeList');
+    const overlay = document.querySelector('.overlay');
+    const playBtn = document.querySelector('.play-btn');
 
-    // Episode data
     const episodes = [
-      { title: "Episode 1", id: "ne0Y0vyjxpE", date: "2025-04-25" },
-      { title: "Episode 2", id: "J2568cnOa1g", date: "2025-04-26" },
-      { title: "Episode 3", id: "QOMv17IjJAU", date: "2025-04-27" },
-      { title: "Episode 4", id: "MT7WzTJZCxg", date: "2025-04-28" },
-      { title: "Episode 5", id: "4sRfndp1vAM", date: "2025-04-29" },
-      { title: "Episode 6", id: "oTvQ-5BNC6w", date: "2025-04-30" },
-      { title: "Episode 7", id: "Em5lFIz_kxU", date: "2025-05-01" },
-      { title: "Episode 8", id: "SBaGblvd4mU", date: "2025-05-02" },
-      { title: "Episode 9", id: "43Hj2GySjgA", date: "2025-05-03" },
-      { title: "Episode 10", id: "TIpodnZtFP4", date: "2025-05-04" },
-      { title: "Episode 11", id: "_L-UG_jvnM4", date: "2025-05-05" },
-      { title: "Episode 12", id: "skAwsc6UL8A", date: "2025-05-06" },
-      { title: "Episode 13", id: "-xUk9E2iQQY", date: "2025-05-07" }
+      { title: 'Episode 1', id: 'ne0Y0vyjxpE' },
+      { title: 'Episode 2', id: 'J2568cnOa1g' },
+      { title: 'Episode 3', id: 'QOMv17IjJAU' },
+      { title: 'Episode 4', id: 'MT7WzTJZCxg' },
+      { title: 'Episode 5', id: '4sRfndp1vAM' },
+      { title: 'Episode 6', id: 'oTvQ-5BNC6w' },
+      { title: 'Episode 7', id: 'Em5lFIz_kxU' },
+      { title: 'Episode 8', id: 'SBaGblvd4mU' },
+      { title: 'Episode 9', id: '43Hj2GySjgA' },
+      { title: 'Episode 10', id: 'TIpodnZtFP4' },
+      { title: 'Episode 11', id: '_L-UG_jvnM4' },
+      { title: 'Episode 12', id: 'skAwsc6UL8A' },
+      { title: 'Episode 13', id: '-xUk9E2iQQY' },
     ];
 
-    const video = document.getElementById('videoPlayer');
-    const list = document.getElementById('episodeList');
-    const epTitle = document.getElementById('episodeTitle');
-    const epDesc = document.getElementById('episodeDesc');
-    const epDate = document.getElementById('uploadDate');
-    const search = document.getElementById('searchInput');
-    const themeSel = document.getElementById('themeSelector');
-
-    // Render episodes
-    function renderEpisodes(filter = '') {
-      list.innerHTML = '';
-      episodes
-        .filter(ep => ep.title.toLowerCase().includes(filter.toLowerCase()))
-        .forEach(ep => {
-          const btn = document.createElement('button');
-          btn.className = 'w-full p-2 bg-purple-700 hover:bg-purple-600 rounded text-left';
-          btn.textContent = ep.title;
-          btn.onclick = () => {
-            video.src = `https://www.youtube.com/embed/${ep.id}?autoplay=1&rel=0&modestbranding=1&controls=1&fs=1`;
-            epTitle.textContent = ep.title;
-            epDesc.textContent = `Wind Breaker S1 — ${ep.title}`;
-            epDate.textContent = `Uploaded: ${ep.date}`;
-            localStorage.setItem('lastEp', ep.id);
-          };
-          list.appendChild(btn);
-        });
-    }
-    renderEpisodes();
-    search.addEventListener('input', e => renderEpisodes(e.target.value));
-
-    // Load last watched
-    const lastEp = localStorage.getItem('lastEp');
-    if (lastEp) {
-      const ep = episodes.find(e => e.id === lastEp);
-      if (ep) {
-        video.src = `https://www.youtube.com/embed/${ep.id}?autoplay=1&rel=0&modestbranding=1&controls=1&fs=1`;
-        epTitle.textContent = ep.title;
-        epDesc.textContent = `Wind Breaker S1 — ${ep.title}`;
-        epDate.textContent = `Uploaded: ${ep.date}`;
-      }
-    }
-
-    // Theme handling
-    themeSel.addEventListener('change', () => {
-      const t = themeSel.value;
-      localStorage.setItem('theme', t);
-      applyTheme(t);
-    });
-    function applyTheme(t) {
-      document.body.className = '';
-      const classes = {
-        default: 'bg-gray-900 text-white',
-        dark1: 'bg-purple-900 text-white',
-        dark2: 'bg-blue-900 text-white',
-        dark3: 'bg-gray-800 text-white',
-        dark4: 'bg-teal-800 text-white',
-        dark5: 'bg-rose-900 text-white'
+    episodes.forEach((ep, index) => {
+      const btn = document.createElement('button');
+      btn.className = 'bg-purple-700 hover:bg-purple-800 p-2 rounded text-left';
+      btn.textContent = ep.title;
+      btn.onclick = () => {
+        player.src = `https://www.youtube.com/embed/${ep.id}?autoplay=1&rel=0&modestbranding=1&controls=1&fs=1`;
       };
-      document.body.classList.add(...classes[t].split(' '));
-    }
-    const saved = localStorage.getItem('theme') || 'default';
-    themeSel.value = saved;
-    applyTheme(saved);
-
-    // Fullscreen overlay adjust
-    document.addEventListener('fullscreenchange', () => {
-      const ov = document.getElementById('ytOverlay');
-      if (document.fullscreenElement) {
-        // ensure overlay stays on top
-        document.fullscreenElement.parentNode.appendChild(ov);
-      } else {
-        document.getElementById('videoContainer').appendChild(ov);
-      }
+      list.appendChild(btn);
     });
-  </script></body>
+
+    function startPlayback() {
+      player.src += '&autoplay=1';
+      playBtn.style.display = 'none';
+    }
+
+    function toggleThemeMenu() {
+      document.getElementById('themeMenu').classList.toggle('hidden');
+    }
+
+    function toggleSearch() {
+      document.getElementById('searchBar').classList.toggle('hidden');
+    }
+
+    function setTheme(theme) {
+      localStorage.setItem('theme', theme);
+      document.body.className = theme;
+    }
+
+    function searchEpisodes(term) {
+      const buttons = list.querySelectorAll('button');
+      buttons.forEach(b => {
+        b.style.display = b.textContent.toLowerCase().includes(term.toLowerCase()) ? 'block' : 'none';
+      });
+    }
+
+    // Apply saved theme on load
+    const savedTheme = localStorage.getItem('theme') || 'dark1';
+    document.body.className = savedTheme;
+  </script>  <!-- Anti-adblock Popunder -->  <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://shebudriftaiter.net/tag.min.js',9277886,document.body||document.documentElement)</script></body>
 </html>
