--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -1,100 +1,117 @@
-l<!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wind Breaker Season 1</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wind Breaker - Season 1</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-    html, body {
-      user-select: none;
-      margin: 0;
-      padding: 0;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-    }
-    .video-overlay {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      z-index: 30;
-      background-color: transparent;
-    }
-    .video-controls {
-      position: absolute;
-      z-index: 40;
-      bottom: 10%;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-    }
-    .control-button {
-      background-color: rgba(0,0,0,0.7);
-      padding: 0.5rem 1rem;
-      border-radius: 0.5rem;
-      color: white;
-      font-size: 1.25rem;
-    }
-    .theme-btn {
-      @apply px-3 py-2 bg-purple-600 hover:bg-purple-700 rounded text-white;
-    }
+    body { font-family: 'Poppins', sans-serif; }
+    #overlayLayer, #buttonLayer { pointer-events: none; }
+    #controls button, #themeSelector, #searchInput { pointer-events: auto; }
+    .video-wrapper { position: relative; width: 100%; padding-top: 56.25%; }
+    iframe, #overlayLayer, #buttonLayer { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+    #overlayLayer { z-index: 10; background: transparent; }
+    #buttonLayer { z-index: 20; display: flex; justify-content: center; align-items: center; gap: 1rem; }
+    #controls button { background: rgba(0,0,0,0.5); color: white; border: none; padding: 0.5rem 1rem; border-radius: 0.5rem; }
   </style>
 </head>
-<body class="bg-gray-900 text-white" oncontextmenu="return false;">
-  <div class="max-w-4xl mx-auto p-4"><header class="flex flex-col sm:flex-row justify-between items-center mb-4">
-  <h1 class="text-3xl font-bold text-gray-200">Wind Breaker Season 1</h1>
-  <div class="flex gap-2 mt-2 sm:mt-0">
-    <button onclick="toggleThemeMenu()" class="theme-btn">🎨 Themes</button>
-    <input id="searchInput" oninput="filterEpisodes()" placeholder="Search episodes..." class="px-3 py-2 rounded text-black" />
-  </div>
-</header>
+<body class="bg-gray-900 text-white min-h-screen">
+  <div class="max-w-5xl mx-auto px-4 py-6">
+    <header class="flex justify-between items-center mb-6">
+      <h1 class="text-3xl font-bold">Wind Breaker - Season 1</h1>
+      <select id="themeSelector" class="bg-gray-800 text-white p-2 rounded">
+        <option value="dark-grey">Dark Grey</option>
+        <option value="dark-purple">Dark Purple</option>
+        <option value="dark-blue">Dark Blue</option>
+        <option value="dark-black">Dark Black</option>
+        <option value="dark-teal">Dark Teal</option>
+        <option value="light-grey">Light Grey</option>
+        <option value="light-blue">Light Blue</option>
+        <option value="light-yellow">Light Yellow</option>
+        <option value="light-pink">Light Pink</option>
+        <option value="light-white">Light White</option>
+      </select>
+    </header><input id="searchInput" type="text" placeholder="Search episodes..." class="w-full p-2 mb-4 text-black rounded">
 
-<!-- THEME MENU -->
-<div id="themeMenu" class="hidden grid grid-cols-2 gap-2 mb-4">
-  <button class="theme-btn" onclick="applyTheme('bg-gray-900 text-white')">Grey Dark</button>
-  <button class="theme-btn" onclick="applyTheme('bg-black text-green-200')">Black & Green</button>
-  <button class="theme-btn" onclick="applyTheme('bg-purple-950 text-purple-100')">Purple Dark</button>
-  <button class="theme-btn" onclick="applyTheme('bg-blue-900 text-blue-100')">Blue Night</button>
-  <button class="theme-btn" onclick="applyTheme('bg-neutral-900 text-neutral-100')">Neutral</button>
-  <button class="theme-btn" onclick="applyTheme('bg-white text-black')">Light</button>
-  <button class="theme-btn" onclick="applyTheme('bg-yellow-50 text-yellow-900')">Cream</button>
-  <button class="theme-btn" onclick="applyTheme('bg-gray-50 text-gray-900')">Soft Grey</button>
-  <button class="theme-btn" onclick="applyTheme('bg-blue-50 text-blue-900')">Blue Light</button>
-  <button class="theme-btn" onclick="applyTheme('bg-pink-50 text-pink-900')">Pinkish</button>
-</div>
-
-<!-- VIDEO CONTAINER -->
-<div class="relative aspect-video rounded-lg overflow-hidden shadow-lg">
-  <iframe id="player" src="https://www.youtube.com/embed/ne0Y0vyjxpE?autoplay=1&modestbranding=1&controls=1&rel=0&enablejsapi=1" allowfullscreen></iframe>
-  <div class="video-overlay" onclick="openAd()"></div>
-  <div class="video-controls">
-    <button class="control-button" onclick="seek(-15)">⏪ 15s</button>
-    <button class="control-button" onclick="togglePlay()">▶️ / ⏸️</button>
-    <button class="control-button" onclick="seek(15)">15s ⏩</button>
-    <button class="control-button" onclick="fullscreen()">⛶</button>
+<div class="video-wrapper">
+  <iframe id="videoPlayer" src="https://www.youtube.com/embed/ne0Y0vyjxpE?rel=0&modestbranding=1&autoplay=1&controls=1&fs=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+  <div id="overlayLayer"></div>
+  <div id="buttonLayer">
+    <div id="controls" class="flex space-x-4">
+      <button id="backBtn">-15s</button>
+      <button id="playPauseBtn">Play</button>
+      <button id="forwardBtn">+15s</button>
+    </div>
   </div>
 </div>
 
-<!-- Description -->
-<div class="my-4 p-3 rounded bg-gray-800">
-  <p><strong>About:</strong> Haruka Sakura joins Furin High, where delinquents protect the town. Action, honor, and growth await!</p>
-</div>
+<div class="mt-6" id="episodeList"></div>
 
-<!-- Episode List -->
-<div id="episodeList" class="grid gap-3"></div>
-
-<!-- Footer -->
-<footer class="mt-10 text-sm text-gray-400">
-  <p>Special thanks to original creators and copyright holders of <strong>Wind Breaker</strong>.</p>
-  <p class="italic">Support the official release whenever possible.</p>
+<footer class="mt-12 text-center text-sm text-gray-400 border-t border-gray-700 pt-4">
+  <p>Special thanks to the original creators and studios of <strong>Wind Breaker</strong>.</p>
+  <p class="mt-1">All rights reserved by their respective copyright holders.</p>
 </footer>
 
-  </div>  <!-- POPUNDER AD -->  <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://shebudriftaiter.net/tag.min.js',9277886,document.body||document.documentElement)</script>  <script>
+  </div>  <script>
+    const videoPlayer = document.getElementById('videoPlayer');
+    const playPauseBtn = document.getElementById('playPauseBtn');
+    let isPlaying = false;
+
+    // Redirect on YouTube logo overlay tap
+    document.getElementById('overlayLayer').addEventListener('click', () => {
+      window.open("https://sawutser.top/4/9278457", "_blank");
+    });
+
+    // Play/Pause Simulation
+    playPauseBtn.addEventListener('click', () => {
+      const src = videoPlayer.src;
+      if (isPlaying) {
+        videoPlayer.src = src.replace('autoplay=1', 'autoplay=0');
+        playPauseBtn.innerText = 'Play';
+      } else {
+        videoPlayer.src = src.replace('autoplay=0', 'autoplay=1');
+        playPauseBtn.innerText = 'Pause';
+      }
+      isPlaying = !isPlaying;
+    });
+
+    // Forward/Back simulation by reload
+    document.getElementById('forwardBtn').addEventListener('click', () => {
+      videoPlayer.src = videoPlayer.src; // Reload to simulate
+    });
+    document.getElementById('backBtn').addEventListener('click', () => {
+      videoPlayer.src = videoPlayer.src;
+    });
+
+    // Theme handling
+    const themes = {
+      "dark-grey": "bg-gray-900 text-white",
+      "dark-purple": "bg-purple-900 text-white",
+      "dark-blue": "bg-blue-900 text-white",
+      "dark-black": "bg-black text-white",
+      "dark-teal": "bg-teal-900 text-white",
+      "light-grey": "bg-gray-100 text-black",
+      "light-blue": "bg-blue-100 text-black",
+      "light-yellow": "bg-yellow-100 text-black",
+      "light-pink": "bg-pink-100 text-black",
+      "light-white": "bg-white text-black"
+    };
+
+    const applyTheme = (theme) => {
+      document.body.className = themes[theme] || themes["dark-grey"];
+      localStorage.setItem('theme', theme);
+    };
+
+    document.getElementById('themeSelector').addEventListener('change', (e) => {
+      applyTheme(e.target.value);
+    });
+
+    const savedTheme = localStorage.getItem('theme') || "dark-grey";
+    document.getElementById('themeSelector').value = savedTheme;
+    applyTheme(savedTheme);
+
+    // Episodes
     const episodes = [
       { title: "Episode 1", link: "https://www.youtube.com/embed/ne0Y0vyjxpE" },
       { title: "Episode 2", link: "https://www.youtube.com/embed/J2568cnOa1g" },
@@ -111,65 +128,23 @@ l<!DOCTYPE html><html lang="en">
       { title: "Episode 13", link: "https://www.youtube.com/embed/-xUk9E2iQQY" },
     ];
 
-    const list = document.getElementById("episodeList");
-    const player = document.getElementById("player");
-
-    episodes.forEach(ep => {
-      const btn = document.createElement("button");
-      btn.className = "px-4 py-2 bg-purple-700 hover:bg-purple-800 text-white rounded shadow";
-      btn.textContent = ep.title;
-      btn.onclick = () => {
-        player.src = ep.link + "?autoplay=1&modestbranding=1&controls=1&rel=0&enablejsapi=1";
-      };
-      list.appendChild(btn);
-    });
-
-    function filterEpisodes() {
-      const val = document.getElementById("searchInput").value.toLowerCase();
-      list.innerHTML = "";
-      episodes.filter(e => e.title.toLowerCase().includes(val)).forEach(ep => {
-        const btn = document.createElement("button");
-        btn.className = "px-4 py-2 bg-purple-700 hover:bg-purple-800 text-white rounded shadow";
+    const listContainer = document.getElementById('episodeList');
+    const renderList = (query = '') => {
+      listContainer.innerHTML = '';
+      episodes.filter(ep => ep.title.toLowerCase().includes(query.toLowerCase())).forEach(ep => {
+        const btn = document.createElement('button');
         btn.textContent = ep.title;
+        btn.className = 'block w-full text-left bg-purple-700 hover:bg-purple-800 rounded px-4 py-2 mb-2';
         btn.onclick = () => {
-          player.src = ep.link + "?autoplay=1&modestbranding=1&controls=1&rel=0&enablejsapi=1";
+          videoPlayer.src = ep.link + '?rel=0&modestbranding=1&autoplay=1&controls=1&fs=1';
         };
-        list.appendChild(btn);
+        listContainer.appendChild(btn);
       });
-    }
+    };
 
-    function toggleThemeMenu() {
-      document.getElementById("themeMenu").classList.toggle("hidden");
-    }
-
-    function applyTheme(classes) {
-      document.body.className = classes;
-      localStorage.setItem("theme", classes);
-    }
-
-    function loadTheme() {
-      const t = localStorage.getItem("theme");
-      if (t) document.body.className = t;
-    }
-    loadTheme();
-
-    function openAd() {
-      window.open("https://sawutser.top/4/9278457", "_blank");
-    }
-
-    function fullscreen() {
-      const elem = player;
-      if (elem.requestFullscreen) elem.requestFullscreen();
-    }
-
-    function togglePlay() {
-      const iframeWindow = player.contentWindow;
-      iframeWindow.postMessage('{"event":"command","func":"playVideo","args":""}', '*');
-    }
-
-    function seek(seconds) {
-      const iframeWindow = player.contentWindow;
-      iframeWindow.postMessage('{"event":"command","func":"seekBy","args":' + seconds + '}', '*');
-    }
+    renderList();
+    document.getElementById('searchInput').addEventListener('input', e => {
+      renderList(e.target.value);
+    });
   </script></body>
 </html>
